--- a/GUI/Src/MainWindow.xaml
+++ b/GUI/Src/MainWindow.xaml
@@ -5,10 +5,11 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:local="clr-namespace:GUI"
 		mc:Ignorable="d"
-		Title="MainWindow" Height="450" Width="800"
-		Loaded="MainWindow_OnLoaded">
+		Title="MainWindow" Height="720" Width="1280"
+		Loaded="MainWindow_OnLoaded"
+		Closed="MainWindow_OnClosed">
 	<DockPanel>
-		<TextBox Name="TextBox_Threshold" DockPanel.Dock="Top" KeyDown="TextBox_Threshold_OnKeyDown"/>
-		<Viewbox Name="Viewbox_Image" Stretch="Uniform"/>
+		<TextBox Name="TextBoxFileInput"/>
+		<Image Name="ImageMat" Height="500" />
 	</DockPanel>
 </Window>
