调整界面控件布局

--- a/GUI/Src/MainWindow.xaml
+++ b/GUI/Src/MainWindow.xaml
@@ -6,25 +6,29 @@
 		xmlns:local="clr-namespace:GUI"
 		mc:Ignorable="d"
 		Title="MainWindow" Height="720" Width="1280"
+
+		Loaded="MainWindow_OnLoaded"
 		Closed="MainWindow_OnClosed">
-	<StackPanel>
-		<Border Background="#ffffff" Padding="5" CornerRadius="15">
-			<Grid HorizontalAlignment="Stretch" Height="20">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="9*" />
-					<ColumnDefinition Width="1*" />
-				</Grid.ColumnDefinitions>
 
-				<TextBox Grid.Column="0" x:Name="Textbox_FilePath"/>
-				<Button Grid.Column="1" x:Name="OpenFileDialog" Content="打开文件" Click="OpenFileDialog_OnClick"/>
-			</Grid>
-		</Border>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="20"/>
+			<RowDefinition Height="20"/>
+			<RowDefinition Height="20"/>
+			<RowDefinition/>
+			<RowDefinition Height="20"/>
+		</Grid.RowDefinitions>
+		
+		<StackPanel Grid.Row="0" Orientation="Horizontal">
+			<Button x:Name="OpenFileDialog" Content="文件" Click="OpenFileDialog_OnClick"/>
+		</StackPanel>
 
-		<Grid>
+		<Grid Grid.Row="3">
 			<Grid.RenderTransform>
-				<ScaleTransform x:Name ="Image_PendingScale"/>
+				<ScaleTransform x:Name ="RenderTransformPendingScale"/>
 			</Grid.RenderTransform>
-			<Image Name="Image_Pending" />
+			<Image Name="ImagePending" />
 		</Grid>
-	</StackPanel>
+		<TextBox Grid.Row="4" Name="TextBoxFileOpened"/>
+	</Grid>
 </Window>
